# GLiNER2

./: README.md  finetune.py  finetune_dataset_mentions.py  finetune_enhanced.py
gliner2/: __init__.py  trainer.py
gliner2/inference/: engine.py
gliner2_training/: .env_template  .gitignore  Makefile  README.md  pyproject.toml
gliner2_training/notebooks/: gliner2_training.ipynb
gliner2_training/src/: create_data.py  predict.py  train.py
tutorial/: 3-json_extraction.md  6-relation_extraction.md
